<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">business_carnest</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
    <string name="_">你好</string>
    <string name="phone_number">手机号</string>
    <string name="login">登录</string>
    <string name="forget_passwd">忘记密码？</string>
    <string name="passwd">密码</string>
    <string name="apply_account_describe">没有账号?请前往车蛋官方网站注册申请</string>
    <string name="navigation">订单</string>
    <string name="common_tab">Tab</string>
    <string name="new_pwd">新密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="reset_pwd">重置密码</string>
    
     <!-- 底部文字 -->
    <string-array name="tabTxt">
           <item >首页</item>
           <item >订单</item>
           <item >账单</item>
           <item >我的</item>
    </string-array>
    <!-- Fragment页面切换顺序必须对应底部导航 -->
    <string-array name="main_fragment">
          <item >cn.caregg.o2o.business.ui.fragment.MainPageFragment</item>
          <item >cn.caregg.o2o.business.ui.fragment.OrderManagerFragment</item>
          <item >cn.caregg.o2o.business.ui.fragment.BillManagerFragment</item>
          <item >cn.caregg.o2o.business.ui.fragment.MyselfFragment</item>
    </string-array>
    <string name="business_envrionment">商家环境</string>
    <string name="business_myself_phone_numer">手机号：%1$s</string>
    <string name="business_name">上海百瑞洗车行</string>
    <string-array name="business_myself_tab">
           <item >消息通知</item>
           <item >查看店铺</item>
           <item >用户信息</item>
           <item >意见反馈</item>
           <item >账户信息</item>
    </string-array>
    <string-array name="business_info_tab">
           <item >商家位置</item>
           <item >联系方式</item>
           <item >营业时间</item>
           <item >商家环境</item>
           <item >商家介绍</item>
           <item >提现账号</item>
     </string-array>
     <string-array name="main_tabTxts">
           <item >昨日营业收入</item>
           <item >本周营业收入</item>
           <item >可提款金额</item>
           <item >洗车商品</item>
           <item >美容商品</item>
           <item >保养商品</item>
      </string-array>
      <string-array name="envrionment_tabTxts">
           <item >休息室</item>
           <item >免费茶饮</item>
           <item >免费wifi</item>
           <item >专人接待</item>
           <item >电脑上网</item>
           <item >专用停车</item>
           <item >电视</item>
      </string-array>
      <string-array name="accessInfo_tabTxts">
            <item >版本信息</item>
            <item >绑定手机</item>
            <item >修改密码</item>
      </string-array>
      
      <string name="plase_inputdata">请输入数据</string>
      <string name="save">保存</string>
</resources>
